src/test/ui/lub-glb/old-lub-glb-hr.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/old-lub-glb-hr.rs:8:13
   |
LL |       let z = match 22 { //~ ERROR incompatible types
   |  _____________^
LL | |         0 => x,
LL | |         _ => y,
   | |              - match arm with an incompatible type
LL | |     };
   | |_____^ expected bound lifetime parameter, found concrete lifetime
   |
   = note: expected type `for<'r, 's> fn(&'r u8, &'s u8)`
              found type `for<'a> fn(&'a u8, &'a u8)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
